k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fileserver-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-cloudflare"  # this ensures cert-manager issues the certificate
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - software.labjunkie.org
    secretName: software-tls  # cert-manager will store the SSL certs here
  rules:
  - host: software.labjunkie.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fileserver-nginx-service
            port:
              number: 80
